Trying to add refprop to ci test

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,6 +25,15 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      - name: Set up REFPROP
+        env:
+          TOKEN: ${{ secrets.ACCESS_TOKEN }}
+        run: |
+          git config --global url."https://${TOKEN}:x-oauth-basic@github.com/".insteadOf "https://github.com/"
+          git clone git@github.com:raphaeltimbo/REFPROP.git
+          cd REFPROP
+          echo $PWD
+
     # Installing dependencies
       - name: Install dependencies
         run: |
