--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,6 +8,9 @@ on:
   pull_request:
     branches: [ master ]
 
+env:
+  RPPREFIX: "/home/REFPROP/build"
+
 jobs:
   build:
     runs-on: ${{ matrix.os }}
@@ -30,6 +33,8 @@ jobs:
           TOKEN: ${{ secrets.ACCESS_TOKEN }}
         run: |
           git config --global url."https://${TOKEN}:x-oauth-basic@github.com/".insteadOf "https://github.com/"
+          cd $HOME
+          echo $PWD
           git clone https://github.com/raphaeltimbo/REFPROP.git
           cd REFPROP
           echo $PWD
