--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [3.6, 3.7, 3.8]
-        os: [ubuntu-latest, macOS-latest, windows-latest]
+        os: [ubuntu-latest, macOS-latest]
 
     steps:
       - uses: actions/checkout@v2
@@ -43,6 +43,7 @@ jobs:
       # Running pytest
       - name: Test with pytest
         run: |
+          ls REFPROP/build
           pip install pytest
           pytest ccp
       - name: Code Lint
