--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ on:
     branches: [ master ]
 
 env:
-  RPPREFIX: "/home/runner/work/ccp/ccp/REFPROP/build"
+  RPPREFIX: ~/REFPROP/build
 
 jobs:
   build:
