--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ on:
     branches: [ master ]
 
 env:
-  RPPREFIX: $GITHUB_WORKSPACE/REFPROP/build
+  RPPREFIX: ${GITHUB_WORKSPACE}/REFPROP/build
 
 jobs:
   build:
