--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,9 +8,6 @@ on:
   pull_request:
     branches: [ master ]
 
-env:
-  RPPREFIX: ${GITHUB_WORKSPACE}/REFPROP/build
-
 jobs:
   build:
     runs-on: ${{ matrix.os }}
@@ -43,6 +40,7 @@ jobs:
       # Running pytest
       - name: Test with pytest
         run: |
+          echo "${HOME}/REFPROP/build" >> $RPPREFIX
           ls REFPROP/build
           pip install pytest
           pytest ccp
