--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -5,8 +5,7 @@ python:
   install:
       - method: pip
         path: .
-        extra_requirements:
-          - dev
+      - requirements: docs/requirements.txt
 
 sphinx:
   builder: html
