Cosmetic changes to theme

--- a/ccp/app/.streamlit/config.toml
+++ b/ccp/app/.streamlit/config.toml
@@ -168,10 +168,10 @@ showPyplotGlobalUse = true
 [theme]
 
 # The preset Streamlit theme that your custom theme inherits from. One of "light" or "dark".
-# base =
+base = "light"
 
 # Primary accent color for interactive elements.
-# primaryColor =
+primaryColor = "#2c3e50"
 
 # Background color for the main content area.
 # backgroundColor =
@@ -183,4 +183,4 @@ showPyplotGlobalUse = true
 # textColor =
 
 # Font family for all text in the app, except code blocks. One of "sans serif", "serif", or "monospace".
-# font =
+font = "monospace"
