--- a/ccp/app/.streamlit/config.toml
+++ b/ccp/app/.streamlit/config.toml
@@ -135,7 +135,7 @@ enableStaticServing = false
 # Internet address where users should point their browsers in order to connect to the app. Can be IP address or DNS name and path.
 # This is used to: - Set the correct URL for CORS and XSRF protection purposes. - Show the URL on the terminal - Open the browser
 # Default: 'localhost'
-serverAddress = "localhost"
+serverAddress = "0.0.0.0"
 
 # Whether to send usage statistics to Streamlit.
 # Default: true
