Solve AxiosError: Request failed with status code 403
Got this solution in the link below:
https://discuss.streamlit.io/t/axioserror-request-failed-with-status-code-403/38112/1

--- a/ccp/app/.streamlit/config.toml
+++ b/ccp/app/.streamlit/config.toml
@@ -107,12 +107,12 @@ baseUrlPath = ""
 # Enables support for Cross-Origin Request Sharing (CORS) protection, for added security.
 # Due to conflicts between CORS and XSRF, if `server.enableXsrfProtection` is on and `server.enableCORS` is off at the same time, we will prioritize `server.enableXsrfProtection`.
 # Default: true
-enableCORS = true
+enableCORS = false
 
 # Enables support for Cross-Site Request Forgery (XSRF) protection, for added security.
 # Due to conflicts between CORS and XSRF, if `server.enableXsrfProtection` is on and `server.enableCORS` is off at the same time, we will prioritize `server.enableXsrfProtection`.
 # Default: true
-enableXsrfProtection = true
+enableXsrfProtection = false
 
 # Max size, in megabytes, for files uploaded with the file_uploader.
 # Default: 200
