Add legacy_water_units.txt to package distribution
Include legacy_water_units.txt in package data to fix mmH2O unit
availability in installed packages. This file was introduced in commit
305107b to support pint < 0.24 compatibility but was not being included
in the wheel/sdist distributions, causing UndefinedUnitError when users
tried to use water column pressure units (mmH2O, cmH2O, mH2O) with
older pint versions.

The file is required by ccp/config/units.py which conditionally loads
it based on pint version detection.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,7 +78,7 @@ version = {attr = "ccp.__version__"}
 include = ["ccp*"]
 
 [tool.setuptools.package-data]
-"ccp.config" = ["new_units.txt"]
+"ccp.config" = ["new_units.txt", "legacy_water_units.txt"]
 "ccp.tests" = ["*.py"]
 "ccp.tests.data" = ["*"]
 
