Add pyarrow dependency and document uv package manager
- Add pyarrow to dependencies for parquet file support
- Update CLAUDE.md to document uv as the project package manager
- Update development commands to use uv run and uv sync

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "numpy",
     "scipy",
     "pandas>=0.23",
+    "pyarrow",
     "CoolProp",
     "pint>=0.18",
     "plotly>=4.7.0",
