docs: migrate from Sphinx to Quarto + marimo
Replace Sphinx with Quarto as the documentation engine. Convert
tutorial.ipynb to a marimo notebook (tutorial.py + tutorial.qmd).
Other notebooks (polytropic_methods, evaluation_tutorial) stay as
.ipynb since Quarto renders those natively.

- Add _quarto.yml project config with navbar navigation
- Convert all MyST markdown pages to Quarto .qmd format
- Generate API reference with quartodoc (State, Point, Impeller, Curve)
- Install quarto-marimo extension for rendering marimo code blocks
- Update .readthedocs.yml to use Quarto build pipeline
- Update pyproject.toml: replace Sphinx deps with quartodoc/marimo,
  bump requires-python to >=3.10
- Remove Sphinx conf.py, Makefile, and autosummary templates

--- a/.gitignore
+++ b/.gitignore
@@ -60,8 +60,9 @@ instance/
 # Scrapy stuff:
 .scrapy
 
-# Sphinx documentation
+# Documentation build
 docs/_build/
+docs/.quarto/
 
 # PyBuilder
 target/
