--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,16 +14,14 @@ license = {text = "Apache-2.0"}
 classifiers = [
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.6",
-    "Programming Language :: Python :: 3.7",
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "Programming Language :: Python :: Implementation :: CPython",
     "Operating System :: OS Independent",
 ]
-requires-python = ">=3.6"
+requires-python = ">=3.10"
 dependencies = [
     "numpy",
     "scipy",
@@ -51,17 +49,9 @@ dev = [
     "pytest-cov",
     "coverage",
     "codecov",
-    "sphinx",
-    "nbsphinx",
-    "numpydoc",
-    "sphinxcontrib-bibtex",
     "ruff",
-    "myst-nb",
-    "linkify-it-py",
-    "sphinx-book-theme",
-    "sphinx-panels",
-    "sphinx-copybutton",
-    "sphinx-rtd-theme",
+    "quartodoc",
+    "marimo",
 ]
 app = [
     "streamlit>=1.21.0",
