--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,9 +1,2 @@
-sphinx==7.2.6
-myst-nb==1.1.0
-sphinxcontrib-bibtex==2.6.2
-sphinx-copybutton==0.5.2
-numpydoc==1.7.0
-sphinx-book-theme==1.1.2
-linkify-it-py==2.0.3
-sphinx_design==0.5.0
-sphinxcontrib-googleanalytics==0.4
+quartodoc
+marimo
